Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
 
 <p><img src="https://raw.githubusercontent.com/ACCoder/SlideCalendarTimePicker/master/appworks/SlideCalendarTimePicker/screenshot2.png" alt=""></p>
 
-<p>Setup</p>
+<h3>
+<a id="setup" class="anchor" href="#setup" aria-hidden="true"><span class="octicon octicon-link"></span></a>Setup</h3>
 
 <p>dependencies {
     compile project(':library')
 }</p>
 
-<p>How to Use</p>
+<h3>
+<a id="how-to-use" class="anchor" href="#how-to-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to Use</h3>
 
 <p>final SlideCalendarTimePicker picker = new SlideCalendarTimePicker.Builder(getSupportFragmentManager())
                 .setInitialDate(new Date())
